phase2 project merged